# custom_pc

./: Cargo.toml
assembler/: Cargo.toml
assembler/src/: ast.rs  codegen.rs  error.rs  instruction.rs  lexer.rs  main.rs  parser.rs  symbol_table.rs
docs/: EMULATOR.md  FILE_FORMAT.md  HARDWARE.md  ISA.md  MEMORY_MAP.md
examples/: counter.asm  fibonacci.asm  fibonacci.rs  float_demo.asm  graphics.asm  hello.asm  stack.asm
rsc/: Cargo.toml
rsc/src/: ast.rs  codegen.rs  error.rs  lexer.rs  main.rs  parser.rs
src/: bus.rs  cpu.rs  decoder.rs  error.rs  executor.rs  flags.rs  instruction.rs  lib.rs  machine.rs  main.rs  memory.rs  registers.rs
src/debugger/: breakpoint.rs  disassembler.rs  mod.rs  monitor.rs
src/devices/: disk.rs  display.rs  keyboard.rs  mod.rs  serial.rs  timer.rs
src/utils/: bit.rs  hex.rs  mod.rs
tests/: assembler_tests.rs  cpu_tests.rs  instruction_tests.rs  integration.rs  memory_tests.rs
tools/: hex_dump.rs  image_converter.rs  rom_builder.rs
